# podping.alpha

./: .gitignore  AGENTS.md  README.md  flake.nix
.github/workflows/: ci.yml  gossip-listener-image.yml  gossip-listener-release.yml
.llm_history/: README.md
.llm_history/entries/: 2026-03-07.md  2026-03-11.md
docker/: Dockerfile.gossip-listener  Dockerfile.gossip-writer  docker-compose.gossip-listener.yaml
dtt-fork/: Cargo.toml
dtt-fork/src/: dht.rs
dtt-fork/src/gossip/: mod.rs  receiver.rs  sender.rs
dtt-fork/src/gossip/merge/: bubble.rs  message_overlap.rs  mod.rs
dtt-fork/src/gossip/topic/: bootstrap.rs  publisher.rs  topic.rs
gossip-listener/: Cargo.toml  README.md
gossip-listener/src/: archive.rs  main.rs
gossip-monitor/: Cargo.toml
gossip-monitor/src/: main.rs  swarm.rs  web.rs
gossip-monitor/src/static/: index.html  monitor.js  style.css
gossip-writer/: Cargo.toml
gossip-writer/plexo-schemas/built/dev/plexo/: plexo_message_capnp.rs
gossip-writer/src/: main.rs
