[package]
name = "gossip-monitor"
version = "0.5.6"
authors = ["Dave Jones"]
edition = "2021"

[dependencies]
iroh = "0.97.0"
iroh-gossip = { version = "0.97", features = ["net"] }
distributed-topic-tracker = "0.2.8"
ed25519-dalek = { version = "3.0.0-pre.1", features = ["rand_core"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tokio-stream = "0.1"
hex = "0.4"
anyhow = "1"
rand = "0.9"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

[patch.crates-io]
distributed-topic-tracker = { path = "../dtt-fork" }