[package]
name = "gossip-writer"
version = "0.5.5"
authors = ["Dave Jones"]
edition = "2021"
build = "build.rs"

[build-dependencies]
capnpc = "0.19.0"

[dependencies]
# ZMQ for receiving from front-end
zmq = "0.10"

# Cap'n Proto for deserializing PlexoMessage/PodpingWrite
capnp = "0.19.8"
podping-schemas = { git = "https://github.com/Podcastindex-org/podping-schemas-rust.git", tag = "v1.1.0" }

# Iroh gossip networking
iroh = "0.97.0"
iroh-gossip = { version = "0.97", features = ["net"] }
distributed-topic-tracker = "0.2.8"

# Crypto: signing and hashing
ed25519-dalek = { version = "3.0.0-pre.1", features = ["rand_core"] }
blake3 = "1"
sha2 = "0.10"
rand = "0.9"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# SQLite archive
rusqlite = { version = "0.28", features = ["bundled"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Utilities
hex = "0.4"
bytes = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
libc = "0.2"

[patch.crates-io]
distributed-topic-tracker = { path = "../dtt-fork" }